@@ -1,5 +1,10 @@
 2004-12-31  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/DefaultListSelectionModel.java
+	(fireValueChanged): New method.
+
+2004-12-31  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/DefaultBoundedRangeModel.java:
 	Fixed javadocs all over.
 	(fireStateChanged): Simplified.
